--- a/configs/direct_training/fashionmnist.yaml
+++ b/configs/direct_training/fashionmnist.yaml
@@ -3,7 +3,7 @@ batch_size: 64
 lr: 0.001
 output_dir: ./outputs/fmnist
 data_path: ./data
-
+dataset: FashionMNIST
 DATA:
   DATASET: FashionMNIST
   IMG_SIZE: 32
